force-app/main/default/objects/Active_Trade__c/Active_Trade__c.object-meta.xml
<CustomObject>
    <label>Active Trade</label>
    <nameField>
        <displayFormat>AT-{00000}</displayFormat>
        <label>Active Trades No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Active Trades</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>