force-app/main/default/objects/Active_Trade__c/fields/Best_Contact__c.field-meta.xml
<CustomField>
    <fullName>Best_Contact__c</fullName>
    <formula>Employee__r.Mobile__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Best Contact #</label>
    <type>Text</type>
</CustomField>