force-app/main/default/objects/Active_Trade__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <defaultValue>Today()</defaultValue>
    <description>Day of work</description>
    <label>Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>