force-app/main/default/objects/Active_Trade__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Employee</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Employees__c.Status__c</field>
            <operation>equals</operation>
            <value>Pre Employment, Active</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Employees__c</referenceTo>
    <relationshipLabel>Active Trades</relationshipLabel>
    <relationshipName>Active_Trades</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>