force-app/main/default/objects/Active_Trade__c/fields/Extra_Day_formula__c.field-meta.xml
<CustomField>
    <fullName>Extra_Day_formula__c</fullName>
    <formula>IF( On_Shift__c, FALSE, TRUE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Automatically ticked if the &quot;On Shift&quot; checkbox is unticked.</inlineHelpText>
    <label>Extra Day</label>
    <type>Checkbox</type>
</CustomField>