force-app/main/default/objects/Active_Trade__c/fields/Position__c.field-meta.xml
<CustomField>
    <fullName>Position__c</fullName>
    <formula>Employee__r.PositionLookup__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Position</label>
    <type>Text</type>
</CustomField>