force-app/main/default/objects/Active_Trade__c/fields/Relevant_Department_formula__c.field-meta.xml
<CustomField>
    <fullName>Relevant_Department_formula__c</fullName>
    <formula>TEXT(Employee__r.Relevant_Department__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Relevant Department</label>
    <type>Text</type>
</CustomField>