force-app/main/default/objects/Active_Trade__c/fields/Timesheet_Approved__c.field-meta.xml
<CustomField>
    <fullName>Timesheet_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Timesheet Approved</label>
    <type>Checkbox</type>
</CustomField>