force-app/main/default/objects/Active_Trade__c/fields/Total_Open_Work_Tasks__c.field-meta.xml
<CustomField>
    <fullName>Total_Open_Work_Tasks__c</fullName>
    <label>Total Open Work Tasks</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>