force-app/main/default/objects/Active_Trade__c/fields/Trades_Daily_Report__c.field-meta.xml
<CustomField>
    <fullName>Trades_Daily_Report__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Trades Daily Report</label>
    <referenceTo>Trades_Daily_Report__c</referenceTo>
    <relationshipLabel>Active Trades</relationshipLabel>
    <relationshipName>Active_Trades</relationshipName>
    <type>Lookup</type>
</CustomField>