force-app/main/default/objects/Active_Trade__c/fields/Unit__c.field-meta.xml
<CustomField>
    <fullName>Unit__c</fullName>
    <formula>Employee__r.Assigned_to_Unit__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unit</label>
    <type>Text</type>
</CustomField>