force-app/main/default/objects/Active_Trade__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Employee__c</columns>
    <columns>On_Shift_formula__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>