force-app/main/default/objects/Active_Trade__c/listViews/Timesheet_Approval_Mech.listView-meta.xml
<ListView>
    <fullName>Timesheet_Approval_Mech</fullName>
    <columns>NAME</columns>
    <columns>Unit__c</columns>
    <columns>Date__c</columns>
    <columns>Employee__c</columns>
    <columns>Position__c</columns>
    <columns>On_Shift_formula__c</columns>
    <columns>Timesheet_Approved__c</columns>
    <columns>Crew_Change__c</columns>
    <columns>Notes__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Unit__c</field>
        <operation>equals</operation>
        <value>Depot - Moomba</value>
    </filters>
    <filters>
        <field>Timesheet_Approved__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Timesheet Approval | Mech</label>
</ListView>